Bug 684574 - InternalInvalidateThebesLayersInSubtree should recurse on the subdocument root frame.  r=roc